src/views/snapshots/hn__views__stories__tests__stories_view_aligned_columns.snap
---
source: src/views/stories.rs
expression: output
---
[1]Favs  [2]Top  [3]New  [4]Best  [5]Ask  [6]Show  [7]Jobs
────────────────────────────────────────────────────────────────────────────────
▶ Small numbers (example.com)
  ▲    1 | a            |     0 comments | 1d ago
  Large numbers (example.com)
  ▲ 9999 | verylongname | 12345 comments | 1d ago
  Medium numbers (example.com)
  ▲  100 | pg           |    50 comments | 1d ago














────────────────────────────────────────────────────────────────────────────────
 Top  1/3 | H/L:feeds  f:fav  s:sort  ?:help  q:quit
