src/views/snapshots/hn__views__stories__tests__stories_view_empty_list.snap
---
source: src/views/stories.rs
expression: output
---
[1]Favs  [2]Top  [3]New  [4]Best  [5]Ask  [6]Show  [7]Jobs
────────────────────────────────────────────────────────────────────────────────




















────────────────────────────────────────────────────────────────────────────────
 Top  1/0 | H/L:feeds  f:fav  s:sort  ?:help  q:quit
