src/views/snapshots/hn__views__stories__tests__stories_view_read_stories.snap
---
source: src/views/stories.rs
expression: output
---
[1]Top  [2]New  [3]Best  [4]Ask  [5]Show  [6]Jobs
────────────────────────────────────────────────────────────────────────────────
  Read Story One (example.com)
  ▲ 100 | testuser | 10 comments | 1d ago
▶ Unread Story Two (example.com)
  ▲ 200 | testuser | 10 comments | 1d ago
  Read Story Three (example.com)
  ▲ 300 | testuser | 10 comments | 1d ago














────────────────────────────────────────────────────────────────────────────────
 Top  2/3 | H/L:feeds  ?:help  q:quit
