src/views/snapshots/hn__views__stories__tests__stories_view_selection_highlight.snap
---
source: src/views/stories.rs
expression: output
---
[1]Favs  [2]Top  [3]New  [4]Best  [5]Ask  [6]Show  [7]Jobs
────────────────────────────────────────────────────────────────────────────────
  Show HN: I built a terminal UI for Hacker News (github.com)
  ▲ 142 | dang    |  47 comments | 1d ago
  Why Rust is the Future of Systems Programming (example.com)
  ▲  89 | pg      |  23 comments | 1d ago
▶ Ask HN: What are you working on? (self)
  ▲  56 | sama    | 128 comments | 1d ago
  The unreasonable effectiveness of simple HTML (blog.example.com)
  ▲ 234 | tptacek |  89 comments | 1d ago
  A Deep Dive into Linux Kernel Networking (lwn.net)
  ▲ 167 | patio11 |  34 comments | 1d ago










────────────────────────────────────────────────────────────────────────────────
 Top  3/5 | H/L:feeds  f:fav  s:sort  ?:help  q:quit
